update annotate page to provide container and padding sides around record metadata

--- a/app/views/records/annotate.html.erb
+++ b/app/views/records/annotate.html.erb
@@ -11,6 +11,8 @@
 <div data-ng-app="VoicesApp" data-ng-controller="GalleryController">
   <%= render 'annotate_records' %>
 
-  <!-- Render the record-level metadata -->
-  <%= render 'record_metadata' %>
+  <div class="container padding-sides">
+    <!-- Render the record-level metadata -->
+    <%= render 'record_metadata' %>
+  </div>
 </div>
