separate out padding sides and container classes in annotation view

--- a/app/views/records/annotate.html.erb
+++ b/app/views/records/annotate.html.erb
@@ -11,8 +11,10 @@
 <div data-ng-app="VoicesApp" data-ng-controller="GalleryController">
   <%= render 'annotate_records' %>
 
-  <div class="container padding-sides">
-    <!-- Render the record-level metadata -->
-    <%= render 'record_metadata' %>
+  <div class="container">
+    <div class="padding-sides">
+      <!-- Render the record-level metadata -->
+      <%= render 'record_metadata' %>
+    </div>
   </div>
 </div>
