update records styles to include padding for small placeholder images

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -413,6 +413,7 @@ video {
   border: 1px solid lightgray;
 }
 
+
 /**********************************
 * multiple attachments per record *
 **********************************/
@@ -937,6 +938,14 @@ hr.clear-floats {
   /* multirecord uploads */
   .page-toggles {
     display: none;
+  }
+
+  /***************
+  * records#show *
+  ***************/
+
+  .record-display-container .placeholderImage {
+    padding: 5% 21%;
   }
 
   #next-page-button.mobile-gray,
