update user styles to include styles for placeholder images in user#show

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -100,6 +100,10 @@ a:link{
   text-decoration: none!important;
 }
 
+.placeholder-image {
+  padding: 5% 32%;
+}
+
 /*****************
 * user#show tabs *
 *****************/
