--- a/app/views/user/_angular_search.html.erb
+++ b/app/views/user/_angular_search.html.erb
@@ -66,7 +66,7 @@
                 <div class="section">
                   <a ng-href="/records/{{record.record.id}}">
                     <img data-ng-src="{{ getImageUrl(record.attachments[0]) }}" 
-                         data-ng-class="record.attachments[0].placeholder_image_path !== null && placeholder-image"
+                         data-ng-class="{ 'placeholder-image' : record.attachments[0].placeholder_image_path !== null}"
                          alt="{{ record.record.title }}">
 
                     <div class="masonry-item-title">{{record.record.title}}</div>
