--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -514,10 +514,10 @@ html, body {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: 300;
   font-family: 'YaleNew', serif;
-  padding: 45px 0px 30px 0px;
+  padding: 40px 0px 25px 0px;
   text-align: center;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -713,6 +713,60 @@ button.close:focus {
   width: 55px;
   margin-top: 40px;
   margin-right: 50px;
+}
+
+/********
+* About *
+********/
+
+h1.people-table-label {
+  padding-top: 15px;
+}
+
+@media (min-width: 1200px) {
+  .people-table {
+    width: 700px;
+    padding-left: 210px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .people-table {
+    width: 700px;
+    padding-left: 140px;
+  }
+}
+
+@media (max-width: 991px) {
+  .role {
+    width: 170px;
+  }
+
+  .people-table {
+    width: 640px;
+    padding-left: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .people-table {
+    width: 100%;
+  }
+}
+
+@media (max-width: 677px) {
+  .people-table {
+    padding-left: 0px;
+  }
+
+  .people-table div {
+    width: 100%;
+    text-align: center;
+  }
+
+  .role {
+    background-color: #E7F4FF;
+  }
 }
 
 /*************************************
