use a table layout for the project people in about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -18,13 +18,21 @@
 
     <div class="preface-text">The platform allows institutional archives to collect, use, and disclose student information solely in ways that are compatible with the context in which students provide such information. Future use of the archive will be restricted to educational and research purposes and will be governed by the collection development policies of Manuscripts and Archives for Student Body and Life  at the Yale University Library.</div>
 
-    <h1>People</h1>
-    <div class="preface-text">
-      Project coordinators - Carol Chiodo and Michael Lotstein<br>
-      User experience designer - Monica Ong Reed<br>
-      Developer - Doug Duhaime<br>
-      Advisory board - TBA<br>
-    </div>
+    <h1 class="people-table-label">People</h1>
 
+    <div class="people-table">
+      <row>
+        <div class="col-xs-4 role">Project Coordinators</div>
+        <div class="col-xs-8">Carol Chiodo and Michael Lotstein</div>
+      </row>
+      <row>
+        <div class="col-xs-4 role">Web Designer</div>
+        <div class="col-xs-8">Monica Ong Reed</div>
+      </row>
+      <row>
+        <div class="col-xs-4 role">Web Developer</div>
+        <div class="col-xs-8">Doug Duhaime</div>
+      </row>
+    </div>
   </div>
 </div>
