add padding bottom to metadata in records annotate

--- a/app/views/records/annotate.html.erb
+++ b/app/views/records/annotate.html.erb
@@ -12,7 +12,7 @@
   <%= render 'annotate_records' %>
 
   <div class="container">
-    <div class="padding-sides">
+    <div class="padding-sides padding-bottom">
       <!-- Render the record-level metadata -->
       <%= render 'record_metadata' %>
     </div>
