--- a/app/views/records/_file_too_large_modal.html.erb
+++ b/app/views/records/_file_too_large_modal.html.erb
@@ -6,9 +6,10 @@
     <div class="modal-content">
       <div class="modal-body">
         
-        <%= image_tag("i_cant_even.gif", :class => "i_cant_even") %>
+        <div>Sorry, one or more of the files you uploaded were larger than the maximum file size and could not be uploaded.</div>
 
       </div>
     </div>
   </div>
 </div>
+
