--- a/app/views/records/_record_form.html.erb
+++ b/app/views/records/_record_form.html.erb
@@ -5,7 +5,7 @@
        data-ngf-drag-over-class="dragover" 
        data-ngf-multiple="true" 
        data-ngf-allow-dir="true"
-       accept="image/*, video/*, audio/*, .3gpp, .flv, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
+       accept="image/*|video/*|audio/*|.3gpp|.flv|.pdf|.doc|.docx|.xls|.xlt|.xla|.xlsx|.xlsm|.xltx|.xltm|.xlsb|.xlam|.csv|.tsv|.pptx|.ppt|.potx|.pot|.ppsx|.pps|.pptm|.potm|.ppsm|.ppam"
        data-ngf-pattern="'image/*,video/*,audio/*,.3gpp,.flv,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">
 
     <% if @record.errors.any? %>
@@ -28,7 +28,7 @@
         data-ngf-multiple="true" 
         data-ngf-capture="'camera'"
         id="custom-file-upload"
-        accept="image/*, video/*, audio/*, .3gpp, .flv, .pdf, .doc, .docx, .xls, .xlt, .xla, .xlsx, .xlsm, .xltx, .xltm, .xlsb, .xlam, .csv, .tsv, .pptx, .ppt, .potx, .pot, .ppsx, .pps, .pptm, .potm, .ppsm, .ppam"
+        accept="image/*|video/*|audio/*|.3gpp|.flv|.pdf|.doc|.docx|.xls|.xlt|.xla|.xlsx|.xlsm|.xltx|.xltm|.xlsb|.xlam|.csv|.tsv|.pptx|.ppt|.potx|.pot|.ppsx|.pps|.pptm|.potm|.ppsm|.ppam"
         data-ngf-pattern="'image/*,video/*,audio/*,.3gpp,.flv,.pdf,.doc,.docx,.xls,.xlt,.xla,.xlsx,.xlsm,.xltx,.xltm,.xlsb,.xlam,.csv,.tsv,.pptx,.ppt,.potx,.pot,.ppsx,.pps,.pptm,.potm,.ppsm,.ppam'">
           
         Browse</span>
