--- a/app/views/records/_record_form.html.erb
+++ b/app/views/records/_record_form.html.erb
@@ -37,45 +37,43 @@
 
     <!-- Append progress-bars of uploading files -->
     <div id="progress-bar-table-container" data-ng-if="isNotEmpty(filesInTransit)" data-ng-cloak>
-      <div class="panel panel-default" id="round-table-edges">
-        <table id="progress-bar-table" class="table table-striped table-bordered">
-          <tbody>
-            <tr data-ng-repeat="(filekey, f) in filesInTransit">
-              <td class="file-name-container">
-                <div class="file-name">{{f.name}}</div>
-              </td>
-              <td class="progress-bar-container">
-                <span class="progress" data-ng-cloak>
-                  <div style="width:{{getProgress(f)}}%"></div>
-                </span>
-              </td>
-              <td class="progress-image-container">
-                <div class="progress-image">
-                  
-                  <div data-ng-if="getProgress(f) < 100">
-                    <img 
-                      src="/assets/x-cancel-blue.svg" 
-                      alt="Cancel file upload"
-                      data-ng-click="abort(f)"
-                      class="cancel-upload">
+      <div class="progress-bar-table-wrapper">
+        <div class="panel panel-default" id="round-table-edges">
+          <table id="progress-bar-table" class="table table-striped table-bordered">
+            <tbody>
+              <tr data-ng-repeat="(filekey, f) in filesInTransit">
+                <td class="file-name-container">
+                  <div class="file-name">{{f.name}}</div>
+                </td>
+                <td class="progress-bar-container">
+                  <span class="progress" data-ng-cloak>
+                    <div style="width:{{getProgress(f)}}%"></div>
+                  </span>
+                </td>
+                <td class="progress-image-container">
+                  <div class="progress-image">
+                    <div data-ng-if="getProgress(f) < 100">
+                      <img src="/assets/x-cancel-blue.svg"
+                        alt="Cancel file upload"
+                        data-ng-click="abort(f)"
+                        class="cancel-upload">
+                    </div>
+                    <div data-ng-if="getProgress(f) == 100">
+                      <img src="/assets/check-box-orange.svg" alt="Check box orange">
+                    </div>
                   </div>
-
-                  <div data-ng-if="getProgress(f) == 100">
-                    <img src="/assets/check-box-orange.svg" alt="Check box orange">
-                  </div>
-
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
     <div class="attachment-array" style="display:none;">
       <div data-ng-repeat="r in recordAttachments">
-        <input type="text" 
-               name="{{r.name}}" 
+        <input type="text"
+               name="{{r.name}}"
                value="{{r.value}}">
       </div>
     </div>
@@ -88,8 +86,9 @@
     <div class="field">
       <%= f.label :title, "Title of Material<sup>*</sup>".html_safe %>
       <input 
-        type="text" 
-        name="record[title]" 
+        placeholder="Add a title for this record; e.g. The Green Room Petition"
+        type="text"
+        name="record[title]"
         id="record_title"
         required
         data-ng-model="form.title">
@@ -113,9 +112,10 @@
       <%= f.label :date, "Date of Event" %>
       <div class="form-group date-container">
         <div class='input-group date' id='datetimepicker1'>
-          <input 
-            type='text' 
-            class="form-control" 
+          <input
+            placeholder="Add an event date"
+            type='text'
+            class="form-control"
             name="record[date]"
             id="date-selector-input"
             data-ng-model="form.date">
@@ -128,7 +128,8 @@
 
     <div class="field">
       <%= f.label :location, "Location" %>
-      <input 
+      <input
+        placeholder="Add one or more locations associated with this record"
         type="text" 
         name="record[location]" 
         id="record_location"
@@ -136,23 +137,13 @@
     </div>
 
     <div class="field">
-      <%= f.label :source_url, "Source URL" %>
-      <input 
-        type="text" 
-        name="record[source_url]" 
-        id="record_source_url"
-        data-ng-model="form.source_url">
-    </div>
-
-    <div class="field">
       <%= f.label :hashtag, "Hashtags<sup>*</sup>".html_safe %>
       <input 
-      type="text" 
-      name="record[hashtag]" 
-      id="record_hashtag"
-      placeholder="Add social media hashtags here, e.g. #WeAreYale"
-      required
-      data-ng-model="form.hashtag">
+        type="text"
+        name="record[hashtag]"
+        id="record_hashtag"
+        placeholder="Add social media hashtags here, e.g. #WeAreYale"
+        data-ng-model="form.hashtag">
     </div>
 
     <div class="field" id="make-private-container">
