--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -11,10 +11,6 @@
 <div class="container">
   <div class="padding-sides">
     <h1>Contact Us</h1>
-
-    <div class="preface-text">Do you have questions about the archive? Do you have other materials that you feel should be included? Help us listen, understand and re-imagine Yale.</div>
-
-    <%= render 'form' %>
-
+    <div class="preface-text">If you have questions about the archive, or need to report any technical issues, please contact archives@yale.edu.</div>
   </div>
 </div>
