--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="padding-sides">
     <h1>Contribute</h1>
-    <div class="preface-text">We all have our unique stories, but we are not alone. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
+    <div class="preface-text">The information you provide about your contributions is critical to their usefulness to future scholars and researchers. When filling in the fields below, please note that submissions may contain multiple files but should document a single event or subject (ex. “Protest over re-naming Calhoun College”).</div>
   </div>
 </div>
 
@@ -26,7 +26,7 @@
       </div>
 
       <div class="clear-floats"></div>
-      <div class="postscript-text">To discuss donating other collections of personal papers, ephemera, or organizational records to Manuscripts and Archives, please send inquiries to: <b>mssa.donatematerials@yale.edu</b></div>
+      <div class="postscript-text">To discuss donating other collections of personal papers, ephemera, or organizational records to Manuscripts and Archives, please contact: archives@yale.edu</b></div>
     </div>
   </div>
 </div>
