--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,11 +12,15 @@
 
     <h1>About</h1>
 
-    <div class="preface-text">The Yale Community Voices Archive (YCVA) gathers material associated with student activism at Yale, specifically the protests regarding racial justice. In the fall of 2015, allegations of racial discrimination and insensitivity surfaced, prompting widespread campus protests.  Senior administrators reaffirmed the university’s commitment to increase, respect and support diversity, but the decisions on the residential college names and “Master” title announced at the end of April 2016 spurred further dissent among members of the Yale Community.</div>
+    <div class="preface-text">The goals of the Yale Voices Community Archive (YCVA) are to gather, preserve and make available for teaching and research a broad range of digital materials related to campus life. Yale students, faculty, staff and alumni may contribute digital content including photographs, videos or text.</div>
 
-    <div class="preface-text">The archive aims to capture a broad range of digital materials related to student activism and discussions of race, ethnicity, and social justice at Yale.  These discussions have raised issues of diversity and inclusion and made the intersectional challenges faced by students of color audible and visible to the broader Yale community. The material produced by and related to these protests is contributed by these communities to a content management system that allows secure and private storage of born digital content while allowing professionally managed access to that content. The project responds both to the students’ use of social media for chronicling and debating these events as well as the Yale University Archives seeking a user-friendly means of collecting and preserving digital content.  The platform aims to preserve the strength and resilience of these voices in order to better understand the roles of diversity and inclusion in how we teach and learn.</div>
+    <div class="preface-text">The project responds to the use of social media by individuals and organizations to chronicle and debate significant issues. In addition, contributions will complement and enhance other holdings in the University Archives that document the university’s history and culture.</div>
 
-    <div class="preface-text">The platform allows institutional archives to collect, use, and disclose student information solely in ways that are compatible with the context in which students provide such information. Future use of the archive will be restricted to educational and research purposes and will be governed by the collection development policies of Manuscripts and Archives for Student Body and Life  at the Yale University Library.</div>
+    <div class="preface-text">YCVA is currently in the first phase of a multi-year development schedule. The first phase is to collect contributions.</div>
+
+    <div class="preface-text">Contributors may choose to make their content available or to close it for a period of 25 years from the date of submission, after which it will be made available to the global community. Contributors will retain copyright to the contributions they create themselves. Should Yale community members wish to publish from a contributor’s work, beyond what is provided under fair use, they will need to contact the individual contributor for permission.</div>
+
+    <div class="preface-text">Content provided by contributors will be preserved in perpetuity as part of phase two and made available in phase three to the Yale community and beyond for teaching and research purposes.</div>
 
     <h1 class="people-table-label">People</h1>
 
