--- a/app/views/records/_record_form.html.erb
+++ b/app/views/records/_record_form.html.erb
@@ -38,34 +38,36 @@
     <!-- Append progress-bars of uploading files -->
     <div id="progress-bar-table-container" data-ng-if="isNotEmpty(filesInTransit)" data-ng-cloak>
       <div class="progress-bar-table-wrapper">
-        <div class="panel panel-default" id="round-table-edges">
-          <table id="progress-bar-table" class="table table-striped table-bordered">
-            <tbody>
-              <tr data-ng-repeat="(filekey, f) in filesInTransit">
-                <td class="file-name-container">
-                  <div class="file-name">{{f.name}}</div>
-                </td>
-                <td class="progress-bar-container">
-                  <span class="progress" data-ng-cloak>
-                    <div style="width:{{getProgress(f)}}%"></div>
-                  </span>
-                </td>
-                <td class="progress-image-container">
-                  <div class="progress-image">
-                    <div data-ng-if="getProgress(f) < 100">
-                      <img src="/assets/x-cancel-blue.svg"
-                        alt="Cancel file upload"
-                        data-ng-click="abort(f)"
-                        class="cancel-upload">
+        <div class="progress-bar-table-inner">
+          <div class="panel panel-default" id="round-table-edges">
+            <table id="progress-bar-table" class="table table-striped table-bordered">
+              <tbody>
+                <tr data-ng-repeat="(filekey, f) in filesInTransit">
+                  <td class="file-name-container">
+                    <div class="file-name">{{f.name}}</div>
+                  </td>
+                  <td class="progress-bar-container">
+                    <span class="progress" data-ng-cloak>
+                      <div style="width:{{getProgress(f)}}%"></div>
+                    </span>
+                  </td>
+                  <td class="progress-image-container">
+                    <div class="progress-image">
+                      <div data-ng-if="getProgress(f) < 100">
+                        <img src="/assets/x-cancel-blue.svg"
+                          alt="Cancel file upload"
+                          data-ng-click="abort(f)"
+                          class="cancel-upload">
+                      </div>
+                      <div data-ng-if="getProgress(f) == 100">
+                        <img src="/assets/check-box-orange.svg" alt="Check box orange">
+                      </div>
                     </div>
-                    <div data-ng-if="getProgress(f) == 100">
-                      <img src="/assets/check-box-orange.svg" alt="Check box orange">
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
@@ -137,7 +139,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :hashtag, "Hashtags<sup>*</sup>".html_safe %>
+      <%= f.label :hashtag, "Hashtags".html_safe %>
       <input 
         type="text"
         name="record[hashtag]"
@@ -147,7 +149,7 @@
     </div>
 
     <div class="field" id="make-private-container">
-      <%= f.label :make_private, "Make this record private so only I can see it.".html_safe, :class => "long-label" %>
+      <%= f.label :make_private, "Prevent this record from becoming public in 25 years.".html_safe, :class => "long-label" %>
       
       <!-- field for make private field -->
       <div class="hidden">
@@ -188,7 +190,7 @@
           required
           data-ng-model="form.release_checked">
 
-        <div class="terms-and-conditions">If my contribution is accepted, I agree to donate this material to the Community Voices Archive at Yale University Library for preservation and distribution for research and educational purposes. I understand that I will not receive financial compensation for this material.</div>
+        <div class="terms-and-conditions">I agree to donate this material to the Yale University Archives. The University Archives will preserve the material and make it available for research and teaching to the global community. I will retain copyright to contributions I create myself. I understand that I will not receive financial compensation for this material. I have read and will abide by the <a href="/site-terms.pdf" download>Use of Site - Code of Conduct.</a></div>
       </div>
 
     <% end %>
