open assets in a new tab

--- a/app/views/records/_attachment_gallery.html.erb
+++ b/app/views/records/_attachment_gallery.html.erb
@@ -14,7 +14,8 @@
          data-ng-cloak>
 
       <a data-ng-if="currentPageClass == 'show'"
-       data-ng-href="{{attachment.file_upload_url}}">
+       data-ng-href="{{attachment.file_upload_url}}"
+       target="_">
         <%= render 'attachment_gallery_child' %>
       </a>
 
