--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,7 +12,7 @@
 
     <h1>About</h1>
 
-    <div class="preface-text">The goals of the Yale Voices Community Archive (YCVA) are to gather, preserve and make available for teaching and research a broad range of digital materials related to campus life. Yale students, faculty, staff and alumni may contribute digital content including photographs, videos or text.</div>
+    <div class="preface-text">The goals of the Yale Voices Community Archive (YCVA) are to gather, preserve and make available for teaching and research a broad range of digital materials related to campus life. Yale students, faculty, and staff may contribute digital content including photographs, videos or text.</div>
 
     <div class="preface-text">The project responds to the use of social media by individuals and organizations to chronicle and debate significant issues. In addition, contributions will complement and enhance other holdings in the University Archives that document the university’s history and culture.</div>
 
@@ -22,21 +22,6 @@
 
     <div class="preface-text">Content provided by contributors will be preserved in perpetuity as part of phase two and made available in phase three to the Yale community and beyond for teaching and research purposes.</div>
 
-    <h1 class="people-table-label">People</h1>
-
-    <div class="people-table">
-      <row>
-        <div class="col-xs-4 role">Project Coordinators</div>
-        <div class="col-xs-8">Carol Chiodo and Michael Lotstein</div>
-      </row>
-      <row>
-        <div class="col-xs-4 role">Web Designer</div>
-        <div class="col-xs-8">Monica Ong Reed</div>
-      </row>
-      <row>
-        <div class="col-xs-4 role">Web Developer</div>
-        <div class="col-xs-8">Doug Duhaime</div>
-      </row>
-    </div>
+    <div class="preface-text">To discuss donating other collections of personal papers, ephemera, or organizational records to Manuscripts and Archives, please contact: archives@yale.edu</div>
   </div>
 </div>
