--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,11 +17,10 @@
   <div class="padding-sides">
     <h1>The Yale Community Voices Archive</h1>
     <div class="body-text">
-      The Yale Community Voices Archive (YCVA) captures digital materials related to issues of diversity and inclusion on campus. The protests made the challenges faced by students of color audible and visible to the broader Yale community. The material produced by and related to these protests are contributed by the stakeholders themselves through a participatory platform. The project responds to the students' use of social media for chronicling these events and to requests from scholars and archivists seeking a user-friendly means of collecting and preserving digital content.
+      The goals of the Yale Voices Community Archive (YCVA) are to gather, preserve and make available for teaching and research a broad range of digital materials related to campus life. Yale students, faculty, and staff may contribute digital content including photographs, videos or text.
       <br>
       <br>
-
-      Future curation will be community-based and, given the sweeping nature of the digital archive, will be encouraged as part of a broader curricular program to listen, understand, and reimagine Yale.
+      The project responds to the use of social media by individuals and organizations to chronicle and debate significant issues. In addition, contributions will complement and enhance other holdings in the University Archives that document the university’s history and culture.
     </div>
     <br>
     
