remove line of copy per request

--- a/app/views/records/annotate.html.erb
+++ b/app/views/records/annotate.html.erb
@@ -5,7 +5,7 @@
 <% provide(:page_title, "Show Record") %>
 
 <div class="small-banner-image-container students-image">
-  <div class="small-banner-text">A living document of student protest at Yale</div>
+  <div class="small-banner-text"></div>
 </div>
 
 <div data-ng-app="VoicesApp" data-ng-controller="GalleryController">
