--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -7,7 +7,7 @@
 <% provide(:page_title, "Edit Record") %>
 
 <div class="small-banner-image-container students-image">
-  <div class="small-banner-text">A living document of student protest at Yale</div>
+  <div class="small-banner-text"></div>
 </div>
 
 <!-- Render the attachment(s) -->
