--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
 <% provide(:page_title, "About") %>
 
 <div class="small-banner-image-container yale-image">
-  <div class="small-banner-text">A living document of student protest at Yale</div>
+  <div class="small-banner-text"></div>
 </div>
 
 <div class="container padding-bottom">
